--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.0",
