--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.3",
+    "ngx-spinner": "^17.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.3",
     "tslib": "^2.3.0",
@@ -30,6 +33,7 @@
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
+    "@angular/localize": "^16.0.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
